--- a/book/book.tex
+++ b/book/book.tex
@@ -846,7 +846,7 @@ proporciono instrucciones detalladas para comenzar.
 
 Hay dos versiones de Python, llamadas Python 2 y Python 3.
 Son muy similares, así que si aprendes una, es fácil cambiar
-a la otra.  De hecho, hay sólo unas pocas diferencias que encontrarás
+a la otra.  De hecho, hay solo unas pocas diferencias que encontrarás
 como principiante.
 Este libro está escrito para Python 3, pero incluyo algunas notas
 sobre Python 2.
@@ -910,7 +910,7 @@ pantalla.  En este caso, el resultado es la frase
 \end{verbatim}
 %
 Las comillas en el programa marcan el principio y el final
-del texto a visualizar; éstas no aparecen en el resultado.
+del texto a visualizar; estas no aparecen en el resultado.
 \index{comillas}
 \index{sentencia print}
 \index{print!sentencia}
@@ -980,7 +980,7 @@ con los operadores bit a bit, el resultado te sorprenderá:
 %
 No cubriré
 operadores bit a bit en este libro, pero puedes leer sobre
-éstos en \url{http://wiki.python.org/moin/BitwiseOperators}.
+estos en \url{http://wiki.python.org/moin/BitwiseOperators}.
 \index{operador bit a bit}
 \index{bit a bit!operador}
 
@@ -1074,7 +1074,7 @@ más sobre este tipo de secuencia más adelante.
 \index{natural!lenguaje}
 
 Los {\bf lenguajes naturales} son los lenguajes que hablan las personas,
-tales como el inglés, el español y el francés.  Éstos no fueron diseñados
+tales como el inglés, el español y el francés.  No fueron diseñados
 por las personas (aunque las personas traten de imponerles algo de orden);
 evolucionan de manera natural.
 
@@ -1198,7 +1198,7 @@ fuertes.  Si estás luchando con un error de programación difícil, podrías
 sentir ira, desánimo o vergüenza.
 
 Hay evidencia de que las personas naturalmente responden a los computadores
-como si éstos fueran personas.  Cuando funcionan bien, pensamos en ellos como
+como si estos fueran personas.  Cuando funcionan bien, pensamos en ellos como
 compañeros de equipo, y cuando son obstinados o rudos, respondemos a ellos
 de la misma manera que respondemos a las personas rudas
 y obstinadas (Reeves and Nass, {\it The Media
@@ -1433,7 +1433,7 @@ sean significativos---documentan para qué se usa la variable.
 Los nombres de variable pueden ser tan largos como quieras.  Pueden contener
 tanto letras como números, pero no pueden comenzar con un número.
 Es legal usar letras mayúsculas, pero es convencional
-usar sólo minúsculas para los nombres de variables.
+usar solo minúsculas para los nombres de variables.
 
 El guión bajo, \verb"_", puede aparecer en un nombre.
 A menudo se usa en nombres con varias palabras, tales como
@@ -1984,7 +1984,7 @@ una {\bf sentencia import}:
 \end{verbatim}
 %
 Esta sentencia crea un {\bf objeto de módulo} llamado math.  Si
-muestras el objeto de módulo en pantalla, obtienes información sobre éste:
+muestras el objeto de módulo en pantalla, obtienes información sobre este:
 
 \begin{verbatim}
 >>> math
@@ -2292,7 +2292,7 @@ def impr_2veces(bruce):
 \end{verbatim}
 %
 Esta función asigna el argumento a un parámetro
-con nombre {\tt bruce}.  Cuando la función es llamada, ésta imprime el valor del
+con nombre {\tt bruce}.  Cuando la función es llamada, esta imprime el valor del
 parámetro (sea lo que sea) dos veces.
 
 Esta función puede usarse con cualquier valor que se pueda imprimir.
@@ -2349,7 +2349,7 @@ aquí en \verb"impr_2veces", a todos les llamamos {\tt bruce}.
 \index{variable local}
 \index{local!variable}
 
-Cuando creas una variable dentro de una función, ésta es {\bf local},
+Cuando creas una variable dentro de una función, esta es {\bf local},
 lo cual significa que existe
 solamente dentro de la función.  Por ejemplo:
 \index{paréntesis!parámetros en}
@@ -2418,7 +2418,7 @@ Los marcos se organizan en una pila que indica cuál función
 llama a cuál, y así.  En este ejemplo, \verb"impr_2veces"
 fue llamado por \verb"cat_2veces", y \verb"cat_2veces" fue llamado por
 \verb"__main__", el cual es un nombre especial para el marco más alto.  Cuando
-creas una variable afuera de todas las funciones, ésta pertenece a
+creas una variable afuera de todas las funciones, esta pertenece a
 \verb"__main__".
 
 \index{main}
@@ -2540,7 +2540,7 @@ un programa en funciones.  Hay muchas razones:
 de sentencias, lo cual hace que tu programa sea más fácil de leer y depurar.
 
 \item Las funciones pueden hacer que un programa sea más pequeño al eliminar código
-repetitivo.  Después, si quieres hacer un cambio, sólo tienes
+repetitivo.  Después, si quieres hacer un cambio, solo tienes
 que hacerlo en un lugar.
 
 \item Dividir un programa largo en funciones te permite depurar las
@@ -2619,8 +2619,8 @@ de función.
 pasado como argumento.
 \index{parámetro}
 
-\item[llamada a función:] Una sentencia que ejecuta una función. Ésta
-consiste en el nombre de la función seguido de una lista de argumentos en
+\item[llamada a función:] Una sentencia que ejecuta una función.
+Consiste en el nombre de la función seguido de una lista de argumentos en
 paréntesis.
 \index{llamada a función}
 
@@ -2629,7 +2629,7 @@ Este valor es asignado al parámetro correspondiente en la función.
 \index{argumento}
 
 \item[variable local:]  Una variable definida dentro de una función. Una variable
-local sólo puede usarse dentro de su función.
+local solo puede usarse dentro de su función.
 \index{variable local}
 
 \item[valor de retorno:]  El resultado de una función.  Si una llamada a función
@@ -2753,7 +2753,7 @@ pasando al valor como argumento.
 \item Define una nueva función llamada
 \verb"hacer_4veces" que tome un objeto de función y un valor
 y llame a la función cuatro veces, pasando al valor
-como parámetro.  Debería haber sólo
+como parámetro.  Debería haber solo
 dos sentencias en el cuerpo de esta función, no cuatro.
 
 \end{enumerate}
@@ -2767,7 +2767,7 @@ Solution: \url{http://thinkpython2.com/code/do_four.py}.
 \begin{exercise}
 
 Nota: Este ejercicio debería hacerse
-usando sólo las sentencias y otras características que hemos aprendido hasta
+usando solo las sentencias y otras características que hemos aprendido hasta
 ahora.
 
 \begin{enumerate}
@@ -2886,7 +2886,7 @@ el usuario excepto cerrar la ventana.
 
 Una vez que creas una tortuga, puedes llamar a un {\bf método} para moverla
 alrededor de la ventana.  Un método es similar a una función, pero
-éste usa una sintaxis un poco diferente.  Por ejemplo, para mover la tortuga
+este usa una sintaxis un poco diferente.  Por ejemplo, para mover la tortuga
 adelante:
 
 \begin{verbatim}
@@ -3070,7 +3070,7 @@ Dentro de la función, {\tt t} hace referencia a la misma tortuga {\tt bob}, por
 {\tt t.lt(90)} tiene el mismo efecto que {\tt bob.lt(90)}.  En ese
 caso, ¿por qué no
 llamar al parámetro {\tt bob}?  La idea es que {\tt t} puede ser cualquier
-tortuga, no sólo {\tt bob}, así que podrías crear una segunda tortuga y
+tortuga, no solo {\tt bob}, así que podrías crear una segunda tortuga y
 pasarla como argumento a {\tt cuadrado}:
 
 \begin{verbatim}
@@ -3542,7 +3542,7 @@ y módulo.
 
 \section{División entera y módulo}
 
-El operados {\bf división entera}, \verb"//", divide
+El operador {\bf división entera}, \verb"//", divide
 dos números y redondea a un entero hacia abajo.  Por ejemplo, supongamos que la
 duración de una película es 105 minutos.  Quizás quieres saber
 cuánto dura en horas.  La división convencional
@@ -3590,12 +3590,12 @@ divide dos números y devuelve el resto.
 %
 El operador de módulo es más útil de lo que parece.  Por
 ejemplo, puedes verificar si un número es divisible por otro---si
-{\tt x \% y} es cero, entonces {\tt x} es divisible por {\tt y}.
+{\tt x\%y} es cero, entonces {\tt x} es divisible por {\tt y}.
 \index{divisibilidad}
 
 Además, puedes extraer el dígito de más a la derecha
-o más dígitos de un número.  Por ejemplo, {\tt x \% 10} entrega el
-dígito de más a la derecha de {\tt x} (en base 10).  De manera similar, {\tt x \% 100}
+o más dígitos de un número.  Por ejemplo, {\tt x\%10} entrega el
+dígito de más a la derecha de {\tt x} (en base 10).  De manera similar, {\tt x\%100}
 entrega los dos últimos dígitos.
 
 Si estás usando Python 2, la división funciona diferente.  El
@@ -3667,7 +3667,7 @@ es usar el signo igual simple ({\tt =}) en lugar de un signo igual doble
 Existen tres {\bf operadores lógicos}: {\tt and}, {\tt
 or} y {\tt not}.  La semántica (significado) de estos operadores es
 similar a su significado en inglés.  Por ejemplo,
-{\tt x > 0 and x < 10} es verdadera sólo si {\tt x} es mayor que 0
+{\tt x > 0 and x < 10} es verdadera solo si {\tt x} es mayor que 0
 {\em y} menor que 10.
 \index{operador and}
 \index{operador or}
@@ -3694,7 +3694,7 @@ True
 \end{verbatim}
 %
 Esta flexibilidad puede ser útil, pero hay algunas sutilezas
-que podrían ser confusas.  Podrías querer evitarla (a menos que
+que podrían ser confusas.  Podrías querer evitar esto (a menos que
 sepas lo que estás haciendo).
 
 
@@ -3706,10 +3706,10 @@ sepas lo que estás haciendo).
 \index{sentencia if}
 \index{if!sentencia}
 \index{ejecución condicional}
-Para escribir programas útiles, casi necesitamos la capacidad
+Para escribir programas útiles, casi siempre necesitamos la capacidad
 de verificar las condiciones y cambiar el comportamiento del programa
-como corresponde.  Las {\bf sentencias condicionales} nos dan esta habilidad.  La
-forma más simple es la sentencia {tt if}:
+como corresponde.  Las {\bf sentencias condicionales} nos dan esta capacidad.  La
+forma más simple es la sentencia {\tt if}:
 
 \begin{verbatim}
 if x > 0:
@@ -3717,7 +3717,7 @@ if x > 0:
 \end{verbatim}
 %
 La expresión booleana después de {\tt if} se
-llama {\bf condición}.  Si ésta es verdadera, se ejecutan las sentencias
+llama {\bf condición}.  Si es verdadera, se ejecutan las sentencias
 con sangría.  Si no, no pasa nada.
 \index{condición}
 \index{sentencia compuesta}
@@ -3804,7 +3804,7 @@ elif opcion == 'c':
 Cada condición es verificada en orden.  Si la primera es falsa,
 se verifica la siguiente, y así.  Si una de ellas es
 verdadera, se ejecuta la rama correspondiente y la sentencia
-termina.  Incluso si más de una condición es verdadera, sólo se ejecuta
+termina.  Incluso si más de una condición es verdadera, solo se ejecuta
 la primera rama verdadera.
 
 
@@ -3845,7 +3845,7 @@ if 0 < x:
         print('x es un número positivo de un dígito.')
 \end{verbatim}
 %
-La sentencia {\tt print} se ejecuta sólo si pasamos por los dos
+La sentencia {\tt print} solo se ejecuta si pasamos por los dos
 condicionales, así que podemos obtener el mismo efecto con el operador {\tt and}:
 
 \begin{verbatim}
@@ -3904,16 +3904,16 @@ La ejecución de {\tt cuenta\_reg} comienza con {\tt n=1}, y dado que
 \begin{quote}
 La ejecución de {\tt cuenta\_reg} comienza con {\tt n=0}, y dado que {\tt
 n} no es mayor que 0, muestra la palabra ``¡Despegue!'' y luego
-termina.
+vuelve.
 \end{quote}
 
-La {\tt cuenta\_reg} que obtuvo {\tt n=1} termina.
+La {\tt cuenta\_reg} que obtuvo {\tt n=1} vuelve.
 \end{quote}
 
-La {\tt cuenta\_reg} que obtuvo {\tt n=2} termina.
+La {\tt cuenta\_reg} que obtuvo {\tt n=2} vuelve.
 \end{quote}
 
-La {\tt cuenta\_reg} que obtuvo {\tt n=3} termina.
+La {\tt cuenta\_reg} que obtuvo {\tt n=3} vuelve.
 
 Y luego estás de regreso en \verb"__main__".  Por lo tanto, la
 salida completa se ve así:
@@ -3942,7 +3942,7 @@ def imprimir_n(s, n):
     imprimir_n(s, n-1)
 \end{verbatim}
 %
-Si {\tt n <= 0} la {\bf sentencia return} hace que salga de laa función.  El
+Si {\tt n <= 0} la {\bf sentencia return} hace que se salga de la función.  El
 flujo de ejecución vuelve inmediatamente a la llamadora y las líneas restantes
 de la función no se ejecutan.
 \index{sentencia return}
@@ -3972,8 +3972,8 @@ el estado de un programa durante una llamada a función.  El mismo tipo de
 diagrama puede ayudar a interpretar una función recursiva.
 
 Cada vez que una función es llamada, Python crea un
-marco que contiene las variables locales y parámetros de la función.
-Para una función revursiva, podría haber más de un marco en la
+marco que contiene las variables locales y los parámetros de la función.
+Para una función recursiva, podría haber más de un marco en la
 pila al mismo tiempo.
 
 La Figura~\ref{fig.stack2} muestra un diagrama de pila para {\tt cuenta\_reg} llamada con
@@ -3989,7 +3989,7 @@ La Figura~\ref{fig.stack2} muestra un diagrama de pila para {\tt cuenta\_reg} ll
 
 Como siempre, la parte de arriba de la pila es el marco para \verb"__main__".
 Está vacío porque no creamos variables en
-\verb"__main__" ni pasamos argumentos en ésta.
+\verb"__main__" ni le pasamos argumentos.
 \index{caso base}
 \index{recursividad!caso base de}
 
@@ -4002,7 +4002,7 @@ Como ejercicio, dibuja un diagrama de pila para \verb"imprimir_n" llamada con
 \verb"s = 'Hola'" y {\tt n=2}.
 Luego escribe una función llamada \verb"hacer_n" que tome una objeto de
 función y un número, {\tt n}, como argumentos, y que llame
-a la dicha función {\tt n} veces.
+a dicha función {\tt n} veces.
 
 
 \section{Recursividad infinita}
@@ -4066,16 +4066,16 @@ función se llama \verb"raw_input".
 \index{input!función}
 
 \begin{verbatim}
->>> text = input()
-What are you waiting for?
->>> text
-'What are you waiting for?'
+>>> texto = input()
+¿Qué estás esperando?
+>>> texto
+'¿Qué estás esperando?'
 \end{verbatim}
 %
-Before getting input from the user, it is a good idea to print a
-prompt telling the user what to type.  \verb"input" can take a
-prompt as an argument:
-\index{prompt}
+Antes de obtener la entrada del usuario, es una buena idea imprimir
+un mensaje que le diga al usuario qué escribir.  \verb"input" puede tomar un
+mensaje como argumento:
+\index{mensaje}
 
 \begin{verbatim}
 >>> nombre = input('¿Cuál...es tu nombre?\n')
@@ -4085,16 +4085,16 @@ prompt as an argument:
 '¡Arturo, Rey de los Britones!'
 \end{verbatim}
 %
-La secuencia \verb"\n" al final de la pregunta representa una {\bf
-  nueva línea}, el cual es un carácter especial que provoca un salto de línea.
-Esa es la razón por la cual la entrada del usuario aparece debajo de la pregunta.  \index{nueva línea}
+La secuencia \verb"\n" al final del mensaje representa una {\bf
+  nueva línea}, la cual es un carácter especial que provoca un salto de línea.
+Esa es la razón por la cual la entrada del usuario aparece debajo del mensaje.  \index{nueva línea}
 
 Si esperas que el usuario escriba un entero, puedes intentar convertir
 el valor de retorno a {\tt int}:
 
 \begin{verbatim}
->>> pregunta = '¿Cuál...es la velocidad media de una golondrina sin carga?\n'
->>> velocidad = input(pregunta)
+>>> mensaje = '¿Cuál...es la velocidad media de una golondrina sin carga?\n'
+>>> velocidad = input(mensaje)
 ¿Cuál...es la velocidad media de una golondrina sin carga?
 42
 >>> int(velocidad)
@@ -4105,7 +4105,7 @@ Pero si el usuario escribe algo distinto a una cadena de dígitos,
 obtienes un error:
 
 \begin{verbatim}
->>> speed = input(pregunta)
+>>> velocidad = input(mensaje)
 ¿Cuál...es la velocidad media de una golondrina sin carga?
 ¿De qué especie, de la africana o de la europea?
 >>> int(velocidad)
@@ -4123,7 +4123,7 @@ Más adelante veremos cómo tratar este tipo de error.
 \index{rastreo}
 
 Cuando ocurre un error de sintaxis o de tiempo de ejecución, el mensaje de error contiene
-mucha información, pero puede ser abrumadora.  Las partes
+mucha información, pero esto puede ser abrumador.  Las partes
 más útiles suelen ser:
 
 \begin{itemize}
@@ -4152,11 +4152,11 @@ En este ejemplo, el problema es que la segunda línea está desajustada por
 un espacio.  Pero el mensaje de error señala a {\tt y}, lo cual es
 engañoso.  En general, los mensajes de error indican dónde fue descubierto
 el problema, pero el error real podría estar antes en el código,
-a veces en una línea anterior.
+a veces en una línea anterior. Lo mismo ocurre con los errores de tiempo de ejecución. 
 \index{tiempo de ejecución!error de}
 \index{error de tiempo de ejecución}
 
-Lo mismo ocurre con los errores de tiempo de ejecución.  Supongamos que estás intentando
+Supongamos que estás intentando
 calcular una relación señal/ruido en decibeles.  La fórmula
 es $RSR_{db} = 10 \log_{10} (P_{se\tilde{n}al} / P_{ruido})$.  En Python,
 podrías escribir algo así:
@@ -4199,7 +4199,7 @@ supongas que todo lo que dice es correcto.
 \begin{description}
 
 \item[división entera:] Un operador, denotado por {\tt //}, que divide dos
-  números y redondea a un entero hacia abajo (hacia el infinito negativo).
+  números y redondea a un entero hacia abajo (en sentido hacia el infinito negativo).
   \index{división entera}
   \index{entera!división}
 
@@ -4214,7 +4214,7 @@ dividir un número por otro.
 \index{expresión booleana}
 \index{booleana!expresión}
 
-\item[operador relacional:] Una de los operadores que comprara
+\item[operador relacional:] Uno de los operadores que comprara
 sus operandos: {\tt ==}, {\tt !=}, {\tt >}, {\tt <}, {\tt >=} y {\tt <=}.
 
 \item[operador lógico:] Uno de los operadores que combina expresiones
@@ -4312,7 +4312,7 @@ De lo contrario, el programa debería imprimir ``No, eso no funciona.''
 
 \item Escribe una función que permita al usuario ingresar valores
 para {\tt a}, {\tt b}, {\tt c} y {\tt n}, los convierta a
-enteros y use a \verb"comprobar_fermat" para comprobar si éstos
+enteros y use a \verb"comprobar_fermat" para comprobar si
 violan el teorema de Fermat.
 
 \end{enumerate}
@@ -4326,7 +4326,7 @@ violan el teorema de Fermat.
 Si te dan tres palos, podrías ser capaz o no de formar
 un triángulo.  Por ejemplo, si uno de los palos mide 12 pulgadas
 y los otros dos miden una pulgada, no serás
-capaz de hacer que los palos se encuentren en el medio.  Para tres
+capaz de hacer que los palos cortos se encuentren en el medio.  Para tres
 longitudes cualesquiera, hay una prueba simple para ver si es posible formar
 un triángulo:
 
